# interface-streamlit-chat-ollama

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/: app.py
src/ollama_manager/: ollama_config.py  ollama_generate.py
