[tool.poetry]
name = "interface-streamlit-chat-ollama"
version = "0.1.0"
description = ""
authors = ["Rhanyele Marinho <rhany.marinho@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "==3.12.2"
requests = "^2.32.3"
streamlit = "^1.36.0"
ollama = "^0.2.1"
pandas = "^2.2.2"
logging = "^0.4.9.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
